learnt more javascript stuffs

--- a/style.css
+++ b/style.css
@@ -41,12 +41,13 @@ label{
 .inc:hover{
     background-color: rgb(255, 0, 43);
     color: black;
-} */
-.roll{
+} 
+ CSS FOR RANDOM NUMBER GENERATOR STARTS HERE
+roll{
     padding: 10px 50px;
     background-color: white;
 }
 .text{
     font-size: 60px;
     margin-left: 30px;
-}
+} */
